# nhl-led-scoreboard

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  PLUGINS.md  README.md  VERSION  apt-requirements  docker-compose.yml  emulator_config.json  plugins.json  plugins.json.example  plugins.py  pyproject.toml  requirements-docker.txt  requirements.txt
.github/workflows/: ghcr.yml
config/: config.json.sample  config.schema.json  config.schema.json.mqtt_required  logos.json
config/.default/: config.json.sample  config.schema.json
config/colors/: teams.json
config/fonts/: fonts_128x64.json
config/layout/: layout_128x64.json  layout_64x32.json  logos.json  logos_128x64.json
scripts/: install.sh  install_venv.sh
scripts/sbtools/: changelog.sh  checkUpdate.sh  issueUpload.sh  sb-cleanup-cache  sb-init  sb-upgrade
src/: debug.py  main.py  test_api.py  update_checker.py  utils.py
src/api/weather/: ecAlerts.py  ecIcons_utf8.csv  ecWeather.py  nwsAlerts.py  owmWeather.py  wxForecast.py  wx_utils.py
src/boards/: base_board.py  base_plugin.py  boards.py  christmas.py  clock.py  holiday_countdown.py  holiday_countdown_README.md  ovi_tracker.py  player_stats.py  scoreticker.py  screensaver.py  seasoncountdown.py  seriesticker.py  standings.py  stanley_cup_champions.py  stats_leaders.py  team_summary.py  wxAlert.py  wxForecast.py  wxWeather.py
src/boards/builtins/clock/: __init__.py  board.py  config.json  layout_128x64.json  layout_64x32.json
src/boards/builtins/season_countdown/: __init__.py  board.py  config.json  config.sample.json  layout_128x64.json  layout_64x32.json  plugin.json
src/boards/plugins/: LAYOUT_TEMPLATE.md  README.md  __init__.py
src/boards/plugins/example_board/: __init__.py  board.py  config.json  layout_128x64.json  (+1 more)
src/config/: file.py
src/config/files/: layout.py
src/data/: backup_teams_data.json  colors.py  custom_holidays.csv  data.py  holiday_themes.json  layout.py  periods.py  playoffs.py  scoreboard.py  scoreboard_config.py  status.py  team.py
src/nhl_api/: __init__.py  data.py  game.py  info.py  nhl_client.py  player.py
src/nhl_setup/: nhl_setup.py  requirements.txt  validate_json.py
src/renderer/: goal.py  loading_screen.py  logos.py  main.py  matrix.py  penalty.py  screen_config.py
src/sbio/: dimmer.py  motionsensor.py  pushbutton.py  sbMQTT.py  screensaver.py
(+4 files in other folders)
